--- a/locales/ja/translation.json
+++ b/locales/ja/translation.json
@@ -373,7 +373,7 @@
   "SideArea": "サイドパネル",
   "NoDisplay": "アイコンのみ表示",
   "RemoveImage": "画像を削除",
-  "PasteImageSupported": "",
+  "PasteImageSupported": "画像ペースト対応",
   "FileSizeError": "ファイルサイズが最大{{maxSize}}MBを超えています。",
   "FileTypeError": "サポートされていないファイル形式です。画像ファイル（PNG、JPEG、GIF、WebP）のみアップロード可能です。",
   "ImageDimensionError": "画像のサイズが最大{{maxWidth}}x{{maxHeight}}ピクセルを超えています。",
